tests/baselines/reference/parserES5ForOfStatement9.errors.txt
parserES5ForOfStatement9.ts(1,15): error TS2304: Cannot find name 'X'.


==== parserES5ForOfStatement9.ts (1 errors) ====
    for (let v of X) {
                  ~
!!! error TS2304: Cannot find name 'X'.
    }